fixed label alignment

--- a/styles/form.css
+++ b/styles/form.css
@@ -93,6 +93,7 @@ form div div img.clicked {
 }
 
 .hab select,label {
+    text-align: left!important;
     width: 100%;
 }
 
